# my_mmck

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  error.c  error.h  main.c
src/elf/: CMakeLists.txt  auxv.c  auxv.h  dyn.c  dyn.h  elf.c  elf.h  phdr.c  phdr.h
src/htab/: htab.c  htab.h
src/memtrack/: CMakeLists.txt  allocator.c  allocator.h  allocblock.c  allocblock.h  mapblock.c  mapblock.h  mem.c  mem.h  memtrack.c  memtrack.h  syscall.c  syscall.h
src/preload/: CMakeLists.txt  hook_info.h  preload.c  preload.h
src/strace/: CMakeLists.txt  strace.c  strace.h  syscall.c  syscall.h  tracee.c  tracee.h
src/syscall/: CMakeLists.txt  syscall.c  syscall.h
src/test/: sample.c
src/tests/: CMakeLists.txt  sample.c  test.c
src/tracee/: CMakeLists.txt  tracee.c  tracee.h
